Bug 119188 - FILEOPEN: Above paragraph set to 0,90 line instead of 0
Summary: FILEOPEN: Above paragraph set to 0,90 line instead of 0
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-08-09 21:44 UTC by Xisco Faulí
Modified: 2018-09-03 18:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample document (16.54 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-08-09 21:44 UTC, Xisco Faulí
Details
screen shot in MSO (1.89 KB, image/png)
2018-08-31 11:03 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-08-09 21:44:01 UTC
Created attachment 144076 [details]
sample document

Steps to reproduce:
1. Open attached document

-> See bullet list. The items have property above paragraph set to 0,90 line, it should be 0

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: c86a47a9d3debbc7e8ee6247f573e7f98c611f19
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-08-09 21:45:16 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5c6bce38a01b21403a603acd3148cf3bbb4c685f

author	László Németh <nemeth@numbertext.org>	2018-07-12 17:15:03 +0200
committer	László Németh <nemeth@numbertext.org>	2018-07-17 11:59:07 +0200
commit 5c6bce38a01b21403a603acd3148cf3bbb4c685f (patch)
tree 083a6ca71da0cc6cbd63ccc91a7c5897f7453aea
parent 8a304fe8b1282efa2d40bdf337728e64b7532a35 (diff)
tdf#104354 DOCX import: fix paragraph auto spacing in tables

Bisected with: bibisect-linux64-6.2

Adding Cc: to László Németh
Comment 2 László Németh 2018-08-31 11:03:26 UTC
Created attachment 144580 [details]
screen shot in MSO
Comment 3 László Németh 2018-08-31 11:07:40 UTC
Note: not a full regression: top margin of the first list item of a cell was fixed by commit 5c6bce38a01b21403a603acd3148cf3bbb4c685f, see the attached screen shot about special handling of list margins in cells in MSO: only last boundary margin gets a non-zero value in cells.
Comment 4 Commit Notification 2018-09-02 11:14:16 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e2caf236091c71b2148970eba36b22655d8845a

tdf#119188 DOCX import: fix zero margins of numbered lines in cells

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-09-03 18:07:25 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 4b5fcd417587cfb9e6d8b61ecb037ab165eeb5b9
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@László Németh, Thanks for fixing this!!