tdf#119188 DOCX import: fix zero margins of numbered lines in cells

regression from 5c6bce38a01b21403a603acd3148cf3bbb4c685f
(tdf#104354 DOCX import: fix paragraph auto spacing in tables).

Change-Id: I486d155eb4463599ab922837fd2f4347b48e0851
Reviewed-on: https://gerrit.libreoffice.org/58818
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>